--- a/login_app/templates/index.html
+++ b/login_app/templates/index.html
@@ -10,9 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+    {% block body %}
     <div class="container">
         <div class="row justify-content-between">
-            <form class="col col-5 bg-dark text-light p-4">
+            <form action="/register/" method="post" class="col col-5 bg-dark text-light p-4">
                 <h1 class="text-primary">Register</h1>
                 <div class="mb-3 "></div>
                     <label for="first_name" class="form-label">First Name</label>
@@ -35,7 +36,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
-            <form class="col col-5 bg-dark text-light p-4">
+            <form action="/login/" method="post" class="col col-5 bg-dark text-light p-4">
                 <h1 class="text-primary">Login</h1>
                 <div class="mb-3 ">
                     <label for="email" class="form-label">Email address</label>
@@ -50,5 +51,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    {% endblock body %}
 </body>
 </html>
