--- a/login_app/templates/index.html
+++ b/login_app/templates/index.html
@@ -14,6 +14,15 @@
     <div class="container">
         <div class="row justify-content-between">
             <form action="/register/" method="post" class="col col-5 bg-dark text-light p-4">
+                <div class="errors bg-warning text-danger">                    
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages %}
+                                <p>{{messages}}</p>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+                </div>
                 <h1 class="text-primary">Register</h1>
                 <div class="mb-3 "></div>
                     <label for="first_name" class="form-label">First Name</label>
