--- a/login_app/templates/index.html
+++ b/login_app/templates/index.html
@@ -18,7 +18,7 @@
                     {% with messages = get_flashed_messages() %}
                         {% if messages %}
                             {% for message in messages %}
-                                <p>{{messages}}</p>
+                                <p>{{message}}</p>
                             {% endfor %}
                         {% endif %}
                     {% endwith %}
@@ -26,22 +26,22 @@
                 <h1 class="text-primary">Register</h1>
                 <div class="mb-3 "></div>
                     <label for="first_name" class="form-label">First Name</label>
-                    <input type="text" class="form-control" name="first_name">
+                    <input type="text" class="form-control" name="first_name" value="{{session.first_name}}">
                 <div class="mb-3 ">
                     <label for="last_name" class="form-label">Last Name</label>
-                    <input type="text" class="form-control" name="last_name">
+                    <input type="text" class="form-control" name="last_name" value="{{session.last_name}}">
                 </div>
                 <div class="mb-3 ">
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email" value=""> 
+                    <input type="email" class="form-control" name="email" value="{{session.email}}"> 
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" name="password">
+                    <input type="password" class="form-control" name="password" value="{{session.password}}">
                 </div>
                 <div class="mb-3">
                     <label for="confirm_password" class="form-label">Confirm Password</label>
-                    <input type="password" class="form-control" name="confirm_password">
+                    <input type="password" class="form-control" name="confirm_password" value="{{session.confirm_password}}">
                 </div>
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
