--- a/login_app/templates/index.html
+++ b/login_app/templates/index.html
@@ -14,15 +14,15 @@
     <div class="container">
         <div class="row justify-content-between">
             <form action="/register/" method="post" class="col col-5 bg-dark text-light p-4">
-                <div class="errors bg-warning text-danger">                    
-                    {% with messages = get_flashed_messages() %}
-                        {% if messages %}
+                {% with messages = get_flashed_messages(category_filter=['register']) %}
+                    {% if messages %}
+                        <div class="errors bg-warning text-danger p-3">                    
                             {% for message in messages %}
                                 <p>{{message}}</p>
                             {% endfor %}
-                        {% endif %}
-                    {% endwith %}
-                </div>
+                        </div>
+                    {% endif %}
+                {% endwith %}
                 <h1 class="text-primary">Register</h1>
                 <div class="mb-3 "></div>
                     <label for="first_name" class="form-label">First Name</label>
@@ -46,14 +46,24 @@
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
             <form action="/login/" method="post" class="col col-5 bg-dark text-light p-4">
+                {% with messages = get_flashed_messages(category_filter=['login']) %}
+                    {% if messages %}
+                        <div class="errors bg-warning text-danger p-3">                    
+                            {% for message in messages %}
+                                <p>{{message}}</p>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endwith %}
+
                 <h1 class="text-primary">Login</h1>
                 <div class="mb-3 ">
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email" value=""> 
+                    <input type="email" class="form-control" name="email" value="{{session.email}}"> 
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" name="password">
+                    <input type="password" class="form-control" name="password" value="{{session.password}}">
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
