--- a/login_app/templates/success.html
+++ b/login_app/templates/success.html
@@ -4,6 +4,6 @@
 
 
 <h1>{{session['user_id']}} Hello {{user.first_name}}!</h1>
-<a href="/">Go Back</a>
+<a href="/logout/">Go Back</a>
 
 {% endblock body %}
